[package]
name = "tripperjs_wasm"
version = "0.1.0"
edition = "2024"

[lib]
name = "tripperjs_wasm"
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"
wasm-logger = "0.2"
web-sys = "*"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
regex = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "*"
lazy_static = "*"

[profile.release]
opt-level = 3
codegen-units=1